<resources>
    <string name="app_name">CatInder</string>
    <string name="app_slogan">Find your cat\'s soulmate</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_forgotPassword">Forgot password?</string>
    <string name="prompt_accountCreate">Dont\'t have an account?</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_confirm">Confirm</string>
    <string name="prompt_createAccount">Create an account</string>
    <string name="prompt_fullName">Full name</string>
    <string name="prompt_contact">Contact</string>
    <string name="prompt_reTypePass">Re-type Password</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_birthDate">Birth date</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Intersex</item>
    </string-array>


</resources>
