<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icons8_cat_48px" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textColor="@color/colorButton"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"

            android:fontFamily="@font/montserrat"
            android:text="@string/app_slogan"
            android:textColor="@color/colorHint"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/prompt_email_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_email"
            android:shadowColor="#000000"
            android:textAlignment="center"
            android:textColor="#A1A7AA"
            android:textColorHighlight="#000000"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/prompt_password_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/prompt_password"
            android:shadowColor="#C11010"
            android:textAlignment="center"
            android:textColor="@color/colorButton"
            android:textColorHighlight="#B62323"
            android:textColorHint="@color/colorHint"
            android:textColorLink="#BF2626" />

        <TextView
            android:id="@+id/prompt_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/prompt_forgotPassword"
            android:textColor="@color/colorButton"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/montserrat"
            android:onClick="signIn_clicked"
            android:text="@string/btn_signin"
            android:textColor="@color/colorBackground" />

        <TextView
            android:id="@+id/prompt_accountCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:text="@string/prompt_accountCreate"
            android:textColor="@color/colorButton"
            android:textSize="15sp" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:onClick="signUp_clicked"
            android:text="@string/btn_signup"
            android:textColor="@color/colorBackground" />
    </LinearLayout>

</RelativeLayout>